[gd_scene load_steps=4 format=3 uid="uid://dj2hy286nlq5b"]

[ext_resource type="Script" path="res://control_menu.gd" id="1_e4120"]
[ext_resource type="Texture2D" uid="uid://cuslby0h8kgmi" path="res://2d_platformer_background_forest_version_by_ternology_dep186p-fullview.jpg" id="2_vahv2"]

[sub_resource type="Theme" id="Theme_cqsmb"]

[node name="Control" type="Node2D"]
script = ExtResource("1_e4120")

[node name="2dPlatformerBackgroundForestVersionByTernologyDep186p-fullview" type="Sprite2D" parent="."]
position = Vector2(577, 326)
texture = ExtResource("2_vahv2")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 496.0
offset_top = 139.0
offset_right = 663.0
offset_bottom = 181.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0.709804, 0, 0.0901961, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Controls"
horizontal_alignment = 1

[node name="TextEdit" type="TextEdit" parent="TitleLabel"]
layout_mode = 0
offset_left = -13.0
offset_top = 244.0
offset_right = 194.0
offset_bottom = 390.0
theme = SubResource("Theme_cqsmb")
text = "A/arrow left - Left
D/arrow right - Right
Space/arrow up - Jump
R - Die
Esc - menu"

[node name="Options" type="VFlowContainer" parent="."]
offset_left = 512.0
offset_top = 226.0
offset_right = 654.0
offset_bottom = 465.0

[node name="FullscreenButton" type="Button" parent="Options"]
texture_filter = 2
layout_mode = 2
text = "Toggle Fullscreen"

[node name="QuitButton" type="Button" parent="Options"]
layout_mode = 2
text = "Quit"

[node name="BackButton" type="Button" parent="Options"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Options/FullscreenButton" to="." method="_on_fullscreen_button_pressed" flags=18]
[connection signal="pressed" from="Options/QuitButton" to="." method="_on_quit_button_pressed" flags=18]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_back_button_pressed"]
